--- a/2223-9th-grade-sprint-math-games/2223-9th-grade-sprint-math-games.vcxproj
+++ b/2223-9th-grade-sprint-math-games/2223-9th-grade-sprint-math-games.vcxproj
@@ -128,6 +128,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="2223-9th-grade-sprint-math-games.cpp" />
+    <ClCompile Include="Exercises.cpp" />
+    <ClCompile Include="Frame.cpp" />
+    <ClCompile Include="Lessons.cpp" />
+    <ClCompile Include="Menu.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Exercises.h" />
+    <ClInclude Include="Frame.h" />
+    <ClInclude Include="Lessons.h" />
+    <ClInclude Include="Menu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
