--- a/2223-9th-grade-sprint-math-games/2223-9th-grade-sprint-math-games.vcxproj
+++ b/2223-9th-grade-sprint-math-games/2223-9th-grade-sprint-math-games.vcxproj
@@ -137,12 +137,15 @@
     <ClCompile Include="Exercises.cpp" />
     <ClCompile Include="Frame.cpp" />
     <ClCompile Include="Lessons.cpp" />
+    <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="sfml.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Exercises.h" />
     <ClInclude Include="Frame.h" />
     <ClInclude Include="Lessons.h" />
+    <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Menu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
