--- a/2223-9th-grade-sprint-math-games/2223-9th-grade-sprint-math-games.vcxproj.filters
+++ b/2223-9th-grade-sprint-math-games/2223-9th-grade-sprint-math-games.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="defaultMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="About.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Frame.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="defaultMenu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="About.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
